--- a/package.json
+++ b/package.json
@@ -42,14 +42,16 @@
     "framer-motion": "^10.12.16",
     "fs-extra": "^11.1.1",
     "json-server": "^0.17.0",
-    "next": "^13.4.4",
+    "next": "^16.1.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.6.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "resend": "^6.6.0"
   },
   "devDependencies": {
     "@types/next": "^9.0.0",
+    "baseline-browser-mapping": "^2.9.12",
     "sass": "^1.55.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.2.2"
